[package]
name = "shitskip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win-screenshot = "4.0.5"
image = "0.24.7"
opencv = "0.86.1"
rand = "0.8.5"

[dependencies.windows]
version = "0.51.0"
features = ["Win32_UI_WindowsAndMessaging", "Foundation"]
